[package]
name = "dawn-plugin"
description = "Nix Debug Adapter Implementation (DAP)"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[dependencies]
tokio = {version = "1.26.0", default-features = false, features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
snafu = "0.7.4"
debug_types = "1.0.0"
tokio-util = { version = "0.7.7", features = ["codec"]}
futures = { version = "0.3.26"}
async-trait = "0.1.65"


serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.47", features = ["unbounded_depth"] }
bytes = { version = "1.4.0"}
memchr = { version = "2.5.0"}
httparse = { version = "1.8.0"}
nll = { git = "https://github.com/EspressoSystems/nll" }
futures-util = { version = "0.3.26"}
either = "1.8.1"

tower-lsp = { version = "0.19.0" }
tower-service = "0.3.2"

dawn-infra = { path = "../dawn-infra" }

atomic_enum = "0.2.0"
