[package]
name = "nix-bindings"
description = "Nix library bindings"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[lib]
crate_type = ["cdylib"]
test = false

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.27"
cbindgen = "0.24.5"
miette = { version = "5.10.0", features = ["fancy"] }
